@@ -1,3 +1,9 @@
+*** 20000809_1 by lusky
+revved patchlevel to rc4
+syslog() format fix (wnder)
+mod to clean_string() to display ctrl chars as \xxx
+
+
 *** 20000719_1 by lusky
 fixed check for valid chars in m_links()
 fixed high char handling in clean_string() (db)
